# libsdl3-examples

./: CMakeLists.txt
src/animation/: animation.c
src/colorbars/: colorbars.c
src/maze/: maze.c
